refactoring attention training code so its supports ACMIL

--- a/notebooks/demonstrations/patches_loading_selection.ipynb
+++ b/notebooks/demonstrations/patches_loading_selection.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<h1>\n",
-    "    Paches Loading From Whole slide images\n",
+    "    Paches Loading From Whole slide images with masks\n",
     "</h1>"
    ]
   },
@@ -25,9 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Key OPENSLIDE_PATH not found in /home/abdelnour/Documents/4eme_anne/S2/projet/.env.\n",
+      "Key OPENSLIDE_PATH not found in /home/abdelnour/Documents/4eme_anne/S2/projet/.env.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import torch\n",
@@ -57,14 +66,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/abdelnour/Documents/4eme_anne/S2/projet/data/wsi\n"
+      "/home/abdelnour/Documents/4eme_anne/S2/projet/data/wsi\n",
+      "/home/abdelnour/Documents/4eme_anne/S2/projet/data/wsi_patches\n"
      ]
     }
    ],
    "source": [
     "env = dotenv.find_dotenv()\n",
     "WSI_FOLDER = dotenv.get_key(env, key_to_get=\"WSI_FOLDER\")\n",
-    "print(WSI_FOLDER)"
+    "MASKS_FOLDER = dotenv.get_key(env, key_to_get=\"MASKS_FOLDER\")\n",
+    "print(WSI_FOLDER)\n",
+    "print(MASKS_FOLDER)"
    ]
   },
   {
@@ -76,13 +88,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/abdelnour/Documents/4eme_anne/S2/projet/data/wsi/train/Group_AT/Type_ADH/BRACS_1003728.svs\n"
+      "/home/abdelnour/Documents/4eme_anne/S2/projet/data/wsi/train/Group_AT/Type_ADH/BRACS_1003728.svs\n",
+      "/home/abdelnour/Documents/4eme_anne/S2/projet/data/wsi_patches/train/Group_AT/Type_ADH/patches/BRACS_1003728.h5\n"
      ]
     }
    ],
    "source": [
     "wsi_path = os.path.join(WSI_FOLDER, \"train\", \"Group_AT\", \"Type_ADH\", \"BRACS_1003728.svs\")\n",
-    "print(wsi_path)"
+    "coords_path = os.path.join(MASKS_FOLDER, \"train\", \"Group_AT\", \"Type_ADH\",\"patches\", \"BRACS_1003728.h5\")\n",
+    "print(wsi_path)\n",
+    "print(coords_path)"
    ]
   },
   {
@@ -132,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,18 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coords_path = \"/home/abdelnour/Documents/4eme_anne/S2/projet/data/wsi_patches/patches/BRACS_1003728.h5\"\n",
     "dataset = WSIPatchedDataset(wsi_path=wsi_path,patch_size=PATCH_SIZE,transform=transform, coords_path=coords_path)\n",
     "loader = DataLoader(dataset=dataset,batch_size=BATCH_SIZE,num_workers=NUM_WORKERS,prefetch_factor=PREFETCH_FACTOR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,13 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4786dd2842c460a847f91f435d93e58",
+       "model_id": "d3e75fc5449047008d0e4c4adb876cdd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,16 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f02caf94410>"
+       "<matplotlib.image.AxesImage at 0x7f912554c500>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -257,16 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- this exactly the generated stiches by CLAM, so we're loading the data right!."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
+    "- this is exactly the generated stiches by CLAM, so we're loading the data right!."
    ]
   }
  ],
