attention2 with resnet34 evaluation

--- a/notebooks/evaluation/attention_models/att1_resnet18.ipynb
+++ b/notebooks/evaluation/attention_models/att1_resnet18.ipynb
@@ -16,7 +16,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Key OPENSLIDE_PATH not found in /home/abdelnour/Documents/4eme_anne/S2/projet/.env.\n"
+      "Key OPENSLIDE_PATH not found in /home/bracs/Breast-Cancer-Detection/.env.\n",
+      "Key OPENSLIDE_PATH not found in /home/bracs/Breast-Cancer-Detection/.env.\n"
      ]
     }
    ],
@@ -78,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f3a90f8bad0>"
+       "<torch._C.Generator at 0x709977417950>"
       ]
      },
      "execution_count": 3,
@@ -103,9 +104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GFE_FOLDER = dotenv.get_key(dotenv.find_dotenv(), \"GFE_FOLDER\")\n",
-    "MODELS_DIR = dotenv.get_key(dotenv.find_dotenv(), \"MODELS_DIR\")\n",
-    "HISTORIES_DIR = dotenv.get_key(dotenv.find_dotenv(), \"HISTORIES_DIR\")"
+    "TENSORS_DIR = dotenv.get_key(dotenv.find_dotenv(), \"ATT1_RESNET18_TENSORS_DIR\")\n",
+    "MODELS_DIR = dotenv.get_key(dotenv.find_dotenv(), \"ATT1_RESNET18_MODELS_DIR\")\n",
+    "HISTORIES_DIR = dotenv.get_key(dotenv.find_dotenv(), \"ATT1_RESNET18_HISTORIES_DIR\")"
    ]
   },
   {
@@ -114,9 +115,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_DIR = os.path.join(GFE_FOLDER, \"train\")\n",
-    "VAL_DIR = os.path.join(GFE_FOLDER, \"val\")\n",
-    "TEST_DIR = os.path.join(GFE_FOLDER, \"test\")"
+    "TRAIN_DIR = os.path.join(TENSORS_DIR, \"train\")\n",
+    "VAL_DIR = os.path.join(TENSORS_DIR, \"val\")\n",
+    "TEST_DIR = os.path.join(TENSORS_DIR, \"test\")"
    ]
   },
   {
@@ -139,7 +140,7 @@
    ],
    "source": [
     "print(MODELS_DIR)\n",
-    "print(GFE_FOLDER)\n",
+    "print(TENSORS_DIR)\n",
     "print(HISTORIES_DIR)\n",
     "print(TRAIN_DIR)\n",
     "print(VAL_DIR)\n",
@@ -427,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
