--- a/notebooks/EDA/EDA Checklist.ipynb
+++ b/notebooks/EDA/EDA Checklist.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "5386a387-a93a-4f5f-9326-b5e6837c39f7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "c3c0855b-76dc-43fe-ab4a-c4dfd2aba125",
    "metadata": {},
    "outputs": [],
@@ -51,17 +51,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "f57d3e99-eafc-4bd5-85d8-bcf0dc064ac7",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Key ROI_LATEST not found in d:\\AIDS\\S2\\Project\\Breast Cancer Detection\\Breast-Cancer-Detection\\.env.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/abdelnour/Documents/4eme_anne/S2/projet/data/roi-dataset/BRACS_RoI/latest_version\n",
-      "/home/abdelnour/Documents/4eme_anne/S2/projet/data\n",
-      "/home/abdelnour/Documents/4eme_anne/S2/projet/data/roi-dataset\n"
+      "None\n",
+      "D:\\AIDS\\S2\\Project\\Breast Cancer Detection\\Breast-Cancer-Detection\\data\n",
+      "D:\\AIDS\\S2\\Project\\Dataset\\BRACS_RoI\\latest_version\n"
      ]
     }
    ],
@@ -77,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "991b3f22",
    "metadata": {},
    "outputs": [
@@ -85,12 +92,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/abdelnour/Documents/4eme_anne/S2/projet/data/roi-dataset/description_df.csv\n"
+      "D:\\AIDS\\S2\\Project\\Breast Cancer Detection\\Breast-Cancer-Detection\\data\\description_df.csv\n"
      ]
     }
    ],
    "source": [
-    "DESCRIPTION_DF_PATH = os.path.join(ROI_DATA_DIR, \"description_df.csv\")\n",
+    "DESCRIPTION_DF_PATH = os.path.join(DATA_DIR, \"description_df.csv\")\n",
     "print(DESCRIPTION_DF_PATH)"
    ]
   },
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "cbde295a-b133-4645-a011-e1d091601f9c",
    "metadata": {},
    "outputs": [],
@@ -157,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "45e43ec9-e4ff-4774-8e39-328526a399b5",
    "metadata": {},
    "outputs": [],
@@ -176,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "eeb6c762-e55c-4940-8add-ecbce9d33632",
    "metadata": {},
    "outputs": [
@@ -209,12 +216,13 @@
        "      <th>width</th>\n",
        "      <th>height</th>\n",
        "      <th>label</th>\n",
+       "      <th>patches_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>/home/abdelnour/Documents/4eme_anne/S2/projet/...</td>\n",
+       "      <td>BRACS_RoI/latest_version/val/4_ADH/BRACS_1607_...</td>\n",
        "      <td>val</td>\n",
        "      <td>4_ADH</td>\n",
        "      <td>4696840</td>\n",
@@ -222,10 +230,11 @@
        "      <td>1113</td>\n",
        "      <td>1535</td>\n",
        "      <td>atypical</td>\n",
+       "      <td>35.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>/home/abdelnour/Documents/4eme_anne/S2/projet/...</td>\n",
+       "      <td>BRACS_RoI/latest_version/val/4_ADH/BRACS_739_A...</td>\n",
        "      <td>val</td>\n",
        "      <td>4_ADH</td>\n",
        "      <td>8154723</td>\n",
@@ -233,10 +242,11 @@
        "      <td>1309</td>\n",
        "      <td>2159</td>\n",
        "      <td>atypical</td>\n",
+       "      <td>60.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>/home/abdelnour/Documents/4eme_anne/S2/projet/...</td>\n",
+       "      <td>BRACS_RoI/latest_version/val/4_ADH/BRACS_1953_...</td>\n",
        "      <td>val</td>\n",
        "      <td>4_ADH</td>\n",
        "      <td>1661839</td>\n",
@@ -244,10 +254,11 @@
        "      <td>752</td>\n",
        "      <td>840</td>\n",
        "      <td>atypical</td>\n",
+       "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>/home/abdelnour/Documents/4eme_anne/S2/projet/...</td>\n",
+       "      <td>BRACS_RoI/latest_version/val/4_ADH/BRACS_1607_...</td>\n",
        "      <td>val</td>\n",
        "      <td>4_ADH</td>\n",
        "      <td>2383103</td>\n",
@@ -255,10 +266,11 @@
        "      <td>922</td>\n",
        "      <td>922</td>\n",
        "      <td>atypical</td>\n",
+       "      <td>16.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>/home/abdelnour/Documents/4eme_anne/S2/projet/...</td>\n",
+       "      <td>BRACS_RoI/latest_version/val/4_ADH/BRACS_738_A...</td>\n",
        "      <td>val</td>\n",
        "      <td>4_ADH</td>\n",
        "      <td>15071731</td>\n",
@@ -266,6 +278,7 @@
        "      <td>1813</td>\n",
        "      <td>3204</td>\n",
        "      <td>atypical</td>\n",
+       "      <td>112.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -273,21 +286,21 @@
       ],
       "text/plain": [
        "                                                path split category      size  \\\n",
-       "0  /home/abdelnour/Documents/4eme_anne/S2/projet/...   val    4_ADH   4696840   \n",
-       "1  /home/abdelnour/Documents/4eme_anne/S2/projet/...   val    4_ADH   8154723   \n",
-       "2  /home/abdelnour/Documents/4eme_anne/S2/projet/...   val    4_ADH   1661839   \n",
-       "3  /home/abdelnour/Documents/4eme_anne/S2/projet/...   val    4_ADH   2383103   \n",
-       "4  /home/abdelnour/Documents/4eme_anne/S2/projet/...   val    4_ADH  15071731   \n",
+       "0  BRACS_RoI/latest_version/val/4_ADH/BRACS_1607_...   val    4_ADH   4696840   \n",
+       "1  BRACS_RoI/latest_version/val/4_ADH/BRACS_739_A...   val    4_ADH   8154723   \n",
+       "2  BRACS_RoI/latest_version/val/4_ADH/BRACS_1953_...   val    4_ADH   1661839   \n",
+       "3  BRACS_RoI/latest_version/val/4_ADH/BRACS_1607_...   val    4_ADH   2383103   \n",
+       "4  BRACS_RoI/latest_version/val/4_ADH/BRACS_738_A...   val    4_ADH  15071731   \n",
        "\n",
-       "     resolution  width  height     label  \n",
-       "0  (1113, 1535)   1113    1535  atypical  \n",
-       "1  (1309, 2159)   1309    2159  atypical  \n",
-       "2    (752, 840)    752     840  atypical  \n",
-       "3    (922, 922)    922     922  atypical  \n",
-       "4  (1813, 3204)   1813    3204  atypical  "
+       "     resolution  width  height     label  patches_count  \n",
+       "0  (1113, 1535)   1113    1535  atypical           35.0  \n",
+       "1  (1309, 2159)   1309    2159  atypical           60.0  \n",
+       "2    (752, 840)    752     840  atypical           12.0  \n",
+       "3    (922, 922)    922     922  atypical           16.0  \n",
+       "4  (1813, 3204)   1813    3204  atypical          112.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,6 +790,57 @@
    "source": [
     "plot_paches(patches)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a1f3a95f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "patches per split = split\n",
+      "test      39892.0\n",
+      "train    333274.0\n",
+      "val       31258.0\n",
+      "Name: patches_count, dtype: float64\n",
+      "patches per category = category\n",
+      "0_N        34238.0\n",
+      "1_PB      102981.0\n",
+      "2_UDH      25647.0\n",
+      "3_FEA      22113.0\n",
+      "4_ADH      22448.0\n",
+      "5_DCIS     79780.0\n",
+      "6_IC      117217.0\n",
+      "Name: patches_count, dtype: float64\n",
+      "patches per label = label\n",
+      "atypical      44561.0\n",
+      "benign       162866.0\n",
+      "malignant    196997.0\n",
+      "Name: patches_count, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print the number of patches for each split and for each category\n",
+    "patches_per_split = df.groupby(\"split\").patches_count.sum()\n",
+    "patches_per_category = df.groupby(\"category\").patches_count.sum()\n",
+    "patches_per_label = df.groupby(\"label\").patches_count.sum()\n",
+    "\n",
+    "print(f\"patches per split = {patches_per_split}\")\n",
+    "print(f\"patches per category = {patches_per_category}\")\n",
+    "print(f\"patches per label = {patches_per_label}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3984471f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -795,7 +859,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
