--- a/notebooks/evaluation/attention_models/att2_vit_lr_decay.ipynb
+++ b/notebooks/evaluation/attention_models/att2_vit_lr_decay.ipynb
@@ -219,24 +219,24 @@
    "source": [
     "def plot_loss_accuracy(train_history, val_history, title):\n",
     "    fig, ax = plt.subplots(ncols=2)\n",
-    "    fig.suptitle(title, fontsize=16)\n",
-    "    fig.set_size_inches(20, 6)\n",
+    "    fig.suptitle(title, fontsize=18)\n",
+    "    fig.set_size_inches(20,6)\n",
     "\n",
-    "    ax[0].plot(train_history['epoch'], train_history['loss'], label='Training Loss', color='blue')\n",
-    "    ax[0].plot(val_history['epoch'], val_his['loss'], label='Validation Loss', color='orange')\n",
-    "    ax[0].set_title('Training Loss')\n",
+    "    ax[0].plot(train_history['epoch'], train_history['loss'], label='Training Loss', color='green')\n",
+    "    ax[0].plot(val_history['epoch'], val_his['loss'], label='Validation Loss', color='midnightblue')\n",
+    "    ax[0].set_title('Classifier Loss History')\n",
     "    ax[0].set_xlabel('Epochs')\n",
     "    ax[0].set_ylabel('Loss')\n",
     "    ax[0].legend()\n",
-    "    ax[0].grid()\n",
+    "    ax[0].grid(linestyle='dashed', dash_joinstyle='miter', alpha=0.75, zorder=1, color='gray')\n",
     "\n",
-    "    ax[1].plot(train_history['epoch'], train_history['accuracy'], label='Training Accuracy', color='blue')\n",
-    "    ax[1].plot(val_history['epoch'], val_his['accuracy'], label='Validation Accuracy', color='orange')\n",
-    "    ax[1].set_title('Training Accuracy')\n",
+    "    ax[1].plot(train_history['epoch'], train_history['accuracy'], label='Training Accuracy', color='green')\n",
+    "    ax[1].plot(val_history['epoch'], val_his['accuracy'], label='Validation Accuracy', color='midnightblue')\n",
+    "    ax[1].set_title('Classifier Accuracy History')\n",
     "    ax[1].set_xlabel('Epochs')\n",
     "    ax[1].set_ylabel('Accuracy')\n",
     "    ax[1].legend()\n",
-    "    ax[1].grid()"
+    "    ax[1].grid(linestyle='dashed', dash_joinstyle='miter', alpha=0.75, zorder=1, color='gray')"
    ]
   },
   {
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "plot_loss_accuracy(train_history=train_his, val_history=val_his, title=\"ViT-S/16 - Attention 2\")"
+    "plot_loss_accuracy(train_history=train_his, val_history=val_his, title=\"Classifier: ACMIL, feature extractor: ViT-S/16, with learning rate decay\")"
    ]
   },
   {
@@ -443,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
