--- a/notebooks/evaluation/attention_models/att2_resnet18.ipynb
+++ b/notebooks/evaluation/attention_models/att2_resnet18.ipynb
@@ -16,8 +16,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Key OPENSLIDE_PATH not found in /home/abdelnour/Documents/4eme_anne/S2/project_2sc/repo/.env.\n",
-      "Key OPENSLIDE_PATH not found in /home/abdelnour/Documents/4eme_anne/S2/project_2sc/repo/.env.\n"
+      "Key OPENSLIDE_PATH not found in /home/abdelnour/Documents/project_2sc/repo/.env.\n",
+      "Key OPENSLIDE_PATH not found in /home/abdelnour/Documents/project_2sc/repo/.env.\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f3b263259b0>"
+       "<torch._C.Generator at 0x7ff00e9359b0>"
       ]
      },
      "execution_count": 3,
@@ -339,7 +339,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "380f74541e9e423fba0537d39775c088",
+       "model_id": "06807875e763406987dbf8174137525a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -438,7 +438,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -456,5 +456,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
