--- a/docs/Report/main.tex
+++ b/docs/Report/main.tex
@@ -44,7 +44,7 @@ headsepline, % Uncomment to get a line under the header
 
 \renewcommand\thesection{\arabic{section}}
 
-\usepackage{fancyhdr}
+% \usepackage{fancyhdr}
 \usepackage{wrapfig}
 
 
