--- a/notebooks/preprocessing/patching.ipynb
+++ b/notebooks/preprocessing/patching.ipynb
@@ -22,7 +22,7 @@
     "import pandas as pd\n",
     "import warnings\n",
     "from tqdm.notebook import tqdm\n",
-    "sys.path.append('../../src/transforms')"
+    "sys.path.append('../..')"
    ]
   },
   {
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR = dotenv.get_key(dotenv.find_dotenv(), \"ROI_LATEST\")\n",
-    "TARGET_DIR = dotenv.get_key(dotenv.find_dotenv(), \"TARGET_DIR\")\n",
+    "DATA_DIR = dotenv.get_key(dotenv.find_dotenv(), \"ROI_FOLDER\")\n",
+    "TARGET_DIR = dotenv.get_key(dotenv.find_dotenv(), \"PATCHES_FOLDER\")\n",
     "FOLDERS = ['0_N', '1_PB', '2_UDH', '3_FEA', '4_ADH', '5_DCIS', '6_IC']\n",
     "SPLITS = ['val' , 'train', 'test']\n",
     "PATCH_SIZE = 224"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06d384d8a7634b58b9419e6826766558",
+       "model_id": "6b987ef51ec74055adfaea4632b18283",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,7 +280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a4284c66c26442f8278493ffa4ce245",
+       "model_id": "c4807b8c1e3b4f2d94103f1d6bef8db5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -301,7 +301,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44b3cc7ea80c41188f19884ffca88527",
+       "model_id": "bef3c623b0564599a18da00d3d4439ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d122bd4321e844339eed16683f608598",
+       "model_id": "45943fb1d1f64cc7940620cfb9080b4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,7 +343,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "050a405eb8c0447baaccac1af8dedb10",
+       "model_id": "84d9717bc99b45c9948487da2b8aad42",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,7 +364,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d85beba6c9640da9e1108313c8f9eda",
+       "model_id": "e52a8962f07c45d6b68b733e2d528ca4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,7 +385,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "841bd9561b8e4a5c96fe215aaac062f8",
+       "model_id": "0e5924e9f8e240e0b8d74e13a33f4a43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -406,7 +406,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6c0fef7180e4d8aa99823a16526fda7",
+       "model_id": "0c348d90cffa4123946da303d10a6c77",
        "version_major": 2,
        "version_minor": 0
       },
@@ -427,7 +427,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5841729857704683bf693de43764d00b",
+       "model_id": "4b86605663f7428f89a9a3a9259951a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -448,7 +448,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c22bebd99234b39a845c746bf1b426a",
+       "model_id": "6c812cbdf7814aac9b4fac2d5da9aa0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,7 +469,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac3dcb4bf39140fdbfd6aadc35c86c0d",
+       "model_id": "0a6cb5d7278e468790227dd149378cfe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -490,7 +490,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecffd315afc94f9f99b10613b827d122",
+       "model_id": "4751edd2dacc4fcb8d753f4fa837fe6f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -511,7 +511,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90e2bc53848b4bf89d12efb7674105fb",
+       "model_id": "adca269ca4a84239a7b632bc47a08842",
        "version_major": 2,
        "version_minor": 0
       },
@@ -532,7 +532,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6680ded7d06945608aed7ac816268e67",
+       "model_id": "abbb5d8f0d4e42e1949daf7f59eca961",
        "version_major": 2,
        "version_minor": 0
       },
@@ -553,7 +553,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffbec836884e42f2a9e3d19b39047c59",
+       "model_id": "065f33c4a3bd4d6fba7f359557d9aeb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -574,7 +574,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efb4f6e6c90b4ccdb4ef77ac8c981e2f",
+       "model_id": "57b35cf5c0a549438acd3a2679e1f09b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -595,7 +595,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ffea897fe364f11a8581a95601c6942",
+       "model_id": "92b9bad3821648a9bcbb8578c507919d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -616,7 +616,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a62537c3422d4f1d84b1f02cd70e137f",
+       "model_id": "2758d8622561476baa27421d8f77591d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -637,7 +637,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f27e93e6534406c8cae42117375d4a9",
+       "model_id": "7dd795411fac44a28a2bfb5ef4ce952a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -658,7 +658,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b29f8535715c48c6a6dc5135f8aecf5a",
+       "model_id": "03bf72b3be24437fbcc07e6ce6a785d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -679,7 +679,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2697542b13f4b5fbb6b2eca09aa084a",
+       "model_id": "0e440aad9495459b92882884e6949ccf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
        "0  BRACS_1584_N_2_0.png   0_N   val  val/0_N/BRACS_1584_N_2.png    224   224"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
        "(404424, 6)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
