add back report + mamaba setup notes

--- a/notebooks/evaluation/fine_tuning/resnet18_2.ipynb
+++ b/notebooks/evaluation/fine_tuning/resnet18_2.ipynb
@@ -1104,7 +1104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml",
+   "display_name": "project",
    "language": "python",
    "name": "python3"
   },
